[gd_scene load_steps=3 format=3 uid="uid://b5fs52uinrd7b"]

[ext_resource type="Script" uid="uid://c8lv2bdwh0l0v" path="res://src/top_bar/top_bar.gd" id="1_amabh"]
[ext_resource type="Theme" uid="uid://fydcexr46dmu" path="res://themes/default.tres" id="1_srl5s"]

[node name="TopBar" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 16.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_srl5s")
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
script = ExtResource("1_amabh")

[node name="MenuBar" type="MenuBar" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="FileMenuButton" type="MenuButton" parent="MenuBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -19.0
offset_right = 31.0
offset_bottom = 6.0
grow_vertical = 0
text = "File"
item_count = 6
popup/item_0/text = "New"
popup/item_0/id = 0
popup/item_1/text = "Open"
popup/item_1/id = 1
popup/item_2/text = "Save"
popup/item_2/id = 2
popup/item_3/text = "Save As"
popup/item_3/id = 3
popup/item_4/id = 90
popup/item_4/separator = true
popup/item_5/text = "Quit"
popup/item_5/id = 4

[node name="OpenFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
file_mode = 0
access = 2
use_native_dialog = true

[node name="SaveFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
access = 2
use_native_dialog = true

[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_open_file_dialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
